<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        style="@style/TextAppearance.Wallet.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_your_password"
        android:textSize="16sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_wallet_outline"
        android:hint="Email   e.g. email@example.com"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="12dp"
        android:textSize="12sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sendResetButton"
        style="@style/Widget.Wallet.PrimaryButton"
        android:layout_width="match_parent"
        android:layout_marginTop="24dp"
        android:text="@string/send_reset_link" />

    <TextView
        android:id="@+id/switchResetMethodButton"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center"
        android:text="@string/use_mobile_instead"
        android:textColor="@color/wallet_blue"
        android:textSize="12sp"
        android:textStyle="bold" />
</LinearLayout>
